# glyphwork

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  character_evolution.py  procedural_ascii.py  pyproject.toml  radial_reveal.py  setup.py
.github/workflows/: publish.yml  test.yml
demos/: figlet_demo.py  gif_demo_fireworks.py  gif_demo_rain.py  langtons_ant_demo.py  line_styles_demo.py  lsystem_demo.py  reaction_diffusion_demo.py
examples/: animation_demo.py  braille_demo.py  braille_renderer_demo.py  cellular_automata_demo.py  color_demo.py  composite_demo.py  dither_demo.py  junctions_demo.py  particle_demo.py  plasma_reactor_demo.py  procedural_poetry.py  procedural_showcase.txt  readme_hero_demo.py  stigmergy_trails.py  text_demo.py  timeline_demo.py  timeline_showcase.py  transform_demo.py
experiments/: sdf_ascii.py  sdf_samples.txt  swarm_pattern.py
glyphwork/: __init__.py  animation.py  attractors.py  braille.py  cli.py  color_canvas.py  composite.py  core.py  dither.py  figlet.py  flow_field.py  flowfield.py  ifs.py  junctions.py  landscape.py  langtons_ant.py  line_styles.py  lsystems.py  particles.py  patterns.py  reaction_diffusion.py  text.py  timeline.py  transforms.py  voronoi.py  wireframe.py
tests/: test_animation.py  test_attractors.py  test_braille.py  test_composite.py  test_core.py  test_dither.py  test_figlet.py  test_flowfield.py  test_ifs.py  test_junctions.py  test_landscape.py  test_line_styles.py  test_lsystems.py  test_particles.py  test_patterns.py  test_reaction_diffusion.py  test_text.py  test_voronoi.py  test_wireframe.py
(+14 files in other folders)
